Update atomic structure content: change electron representation, remove M shell references, and correct Neon element details for accuracy.

--- a/atom-structure.html
+++ b/atom-structure.html
@@ -36,11 +36,11 @@
                             <div class="neutron">N</div>
                         </div>
                         <div class="electron-shell shell-k">
-                            <div class="electron">e-</div>
+                            <div class="electron">e</div>
                         </div>
                         <div class="electron-shell shell-l">
-                            <div class="electron">e-</div>
-                            <div class="electron">e-</div>
+                            <div class="electron">e</div>
+                            <div class="electron">e</div>
                         </div>
                     </div>
                     <div class="text-content">
@@ -79,10 +79,6 @@
                                 <span class="shell-name">L Katmanı</span>
                                 <span class="shell-capacity" data-tr="(Max 8 elektron)" data-en="(Max 8 electrons)">(Max 8 elektron)</span>
                             </div>
-                            <div class="shell shell-m-shell">
-                                <span class="shell-name">M Katmanı</span>
-                                <span class="shell-capacity" data-tr="(Max 18 elektron)" data-en="(Max 18 electrons)">(Max 18 elektron)</span>
-                            </div>
                         </div>
                     </div>
                     <div class="text-content">
@@ -95,9 +91,6 @@
                             </li>
                             <li data-tr="<strong>L Katmanı:</strong> İkinci katman, en fazla 8 elektron alır" data-en="<strong>L Shell:</strong> Second shell, holds maximum 8 electrons">
                                 <strong>L Katmanı:</strong> İkinci katman, en fazla 8 elektron alır
-                            </li>
-                            <li data-tr="<strong>M Katmanı:</strong> Üçüncü katman, en fazla 18 elektron alır" data-en="<strong>M Shell:</strong> Third shell, holds maximum 18 electrons">
-                                <strong>M Katmanı:</strong> Üçüncü katman, en fazla 18 elektron alır
                             </li>
                         </ul>
                     </div>
@@ -220,14 +213,14 @@
                         <div class="electron-distribution-rules">
                             <div class="rule-item">
                                 <h3 data-tr="Aufbau Prensibi" data-en="Aufbau Principle">Aufbau Prensibi</h3>
-                                <p data-tr="Elektronlar önce en düşük enerjili katmanlara yerleşir. K → L → M → N sırasıyla doldurulur." data-en="Electrons fill the lowest energy shells first. K → L → M → N are filled in order.">
-                                    Elektronlar önce en düşük enerjili katmanlara yerleşir. K → L → M → N sırasıyla doldurulur.
+                                <p data-tr="Elektronlar önce en düşük enerjili katmanlara yerleşir. K → L sırasıyla doldurulur." data-en="Electrons fill the lowest energy shells first. K → L are filled in order.">
+                                    Elektronlar önce en düşük enerjili katmanlara yerleşir. K → L sırasıyla doldurulur.
                                 </p>
                             </div>
                             <div class="rule-item">
                                 <h3 data-tr="Pauli Dışlama Prensibi" data-en="Pauli Exclusion Principle">Pauli Dışlama Prensibi</h3>
-                                <p data-tr="Bir katmanda en fazla belirli sayıda elektron bulunabilir. K: 2, L: 8, M: 18 elektron." data-en="A shell can hold a maximum number of electrons. K: 2, L: 8, M: 18 electrons.">
-                                    Bir katmanda en fazla belirli sayıda elektron bulunabilir. K: 2, L: 8, M: 18 elektron.
+                                <p data-tr="Bir katmanda en fazla belirli sayıda elektron bulunabilir. K: 2, L: 8 elektron." data-en="A shell can hold a maximum number of electrons. K: 2, L: 8 electrons.">
+                                    Bir katmanda en fazla belirli sayıda elektron bulunabilir. K: 2, L: 8 elektron.
                                 </p>
                             </div>
                             <div class="rule-item">
@@ -560,16 +553,16 @@
                             </p>
                         </div>
                         <div class="element-example-card">
-                            <h3 data-tr="Sodyum (Na)" data-en="Sodium (Na)">Sodyum (Na)</h3>
+                            <h3 data-tr="Neon (Ne)" data-en="Neon (Ne)">Neon (Ne)</h3>
                             <div class="element-stats">
-                                <p><strong data-tr="Atom Numarası:" data-en="Atomic Number:">Atom Numarası:</strong> 11</p>
-                                <p><strong data-tr="Proton:" data-en="Protons:">Proton:</strong> 11</p>
-                                <p><strong data-tr="Nötron:" data-en="Neutrons:">Nötron:</strong> 12</p>
-                                <p><strong data-tr="Elektron:" data-en="Electrons:">Elektron:</strong> 11</p>
-                                <p><strong data-tr="Elektron Dağılımı:" data-en="Electron Distribution:">Elektron Dağılımı:</strong> K: 2, L: 8, M: 1</p>
+                                <p><strong data-tr="Atom Numarası:" data-en="Atomic Number:">Atom Numarası:</strong> 10</p>
+                                <p><strong data-tr="Proton:" data-en="Protons:">Proton:</strong> 10</p>
+                                <p><strong data-tr="Nötron:" data-en="Neutrons:">Nötron:</strong> 10</p>
+                                <p><strong data-tr="Elektron:" data-en="Electrons:">Elektron:</strong> 10</p>
+                                <p><strong data-tr="Elektron Dağılımı:" data-en="Electron Distribution:">Elektron Dağılımı:</strong> K: 2, L: 8</p>
                             </div>
-                            <p class="element-note" data-tr="M katmanında 1 elektron var. Na⁺ iyonu oluşturur." data-en="1 electron in M shell. Forms Na⁺ ion.">
-                                M katmanında 1 elektron var. Na⁺ iyonu oluşturur.
+                            <p class="element-note" data-tr="L katmanı tam dolu. Soygaz, reaktif değildir." data-en="L shell is full. Noble gas, not reactive.">
+                                L katmanı tam dolu. Soygaz, reaktif değildir.
                             </p>
                         </div>
                     </div>
@@ -627,24 +620,12 @@
                                     <td>2s² 2p⁶</td>
                                     <td data-tr="Neon (Ne)" data-en="Neon (Ne)">Neon (Ne)</td>
                                 </tr>
-                                <tr>
-                                    <td>M (n=3)</td>
-                                    <td>18</td>
-                                    <td>3s² 3p⁶ 3d¹⁰</td>
-                                    <td data-tr="Argon (Ar)" data-en="Argon (Ar)">Argon (Ar)</td>
-                                </tr>
-                                <tr>
-                                    <td>N (n=4)</td>
-                                    <td>32</td>
-                                    <td>4s² 4p⁶ 4d¹⁰ 4f¹⁴</td>
-                                    <td data-tr="Kripton (Kr)" data-en="Krypton (Kr)">Kripton (Kr)</td>
-                                </tr>
                             </tbody>
                         </table>
                     </div>
                     <div class="text-content" style="margin-top: 20px;">
-                        <p data-tr="<strong>Not:</strong> 7. sınıf seviyesinde genellikle K, L, M katmanları öğretilir. N ve sonraki katmanlar daha ileri seviyede öğrenilir." data-en="<strong>Note:</strong> At 7th grade level, usually K, L, M shells are taught. N and subsequent shells are learned at higher levels.">
-                            <strong>Not:</strong> 7. sınıf seviyesinde genellikle K, L, M katmanları öğretilir. N ve sonraki katmanlar daha ileri seviyede öğrenilir.
+                        <p data-tr="<strong>Not:</strong> 7. sınıf seviyesinde genellikle K ve L katmanları öğretilir. M ve sonraki katmanlar daha ileri seviyede öğrenilir." data-en="<strong>Note:</strong> At 7th grade level, usually K and L shells are taught. M and subsequent shells are learned at higher levels.">
+                            <strong>Not:</strong> 7. sınıf seviyesinde genellikle K ve L katmanları öğretilir. M ve sonraki katmanlar daha ileri seviyede öğrenilir.
                         </p>
                     </div>
                 </div>
